--- a/source/tasks/package.json
+++ b/source/tasks/package.json
@@ -6,22 +6,22 @@
   "author": "Mats Mikkel Rummelhoff <mail@mmikkel.no> (http://mmikkel.no/)",
   "private": true,
   "devDependencies": {
-    "grunt": "0.4.5",
-    "node-sass": "0.9.6",
-    "grunt-sass": "0.15.0",
-    "grunt-contrib-watch": "0.6.1",
-    "grunt-contrib-jshint": "0.10.0",
-    "grunt-contrib-uglify": "0.6.0",
-    "grunt-autoprefixer": "1.0.1",
-    "grunt-contrib-cssmin": "0.10.0",
-    "load-grunt-config": "0.13.2",
-    "grunt-newer": "0.7.0",
-    "jit-grunt": "0.9.0",
-    "grunt-jscs": "0.7.1",
-    "grunt-version-check": "0.2.0",
-    "grunt-scss-lint": "0.3.3",
-    "grunt-growl" : "0.x.x",
-    "grunt-contrib-copy" : "0.x.x",
-    "grunt-contrib-clean" : "0.x.x"
+    "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^3.0.3",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-uglify": "^0.10.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-growl": "^0.1.5",
+    "grunt-jscs": "^2.3.0",
+    "grunt-newer": "^1.1.1",
+    "grunt-sass": "^1.1.0",
+    "grunt-scss-lint": "^0.3.8",
+    "grunt-version-check": "^0.3.1",
+    "jit-grunt": "^0.9.1",
+    "load-grunt-config": "^0.19.0",
+    "node-sass": "^3.4.1"
   }
 }
